fixed navigation bottom bar z-index is being hidden behind the user profile page content

--- a/components/navigation/bottom-navigation/bottom-navigation.module.scss
+++ b/components/navigation/bottom-navigation/bottom-navigation.module.scss
@@ -63,7 +63,7 @@ $edgeSmoothness: 5;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    z-index: 20;
+    z-index: 100;
     margin-bottom: 2px;
     transition: $transition-props;
     @apply  text-indigo-400;
